name:		pngload
version:	0.2
copyright:	(c) 2008 Marko Lauronen
license:	BSD3
license-file:	LICENSE
author:		Marko Lauronen <marko.lauronen@pp1.inet.fi>
maintainer:	Marko Lauronen <marko.lauronen@pp1.inet.fi>
category:	Codecs
synopsis:	Pure Haskell loader for PNG images
description:	This package provides a simple PNG loader for PNG images. It currently supports
		24bit RGB(A) images with no interlacing.
stability:	experimental
build-type:	Simple
cabal-version:	>= 1.2.1
extra-source-files: Test.hs
data-files:     LICENSE, README, test_images/mustang.png

library
  default-language: Haskell2010

  exposed-modules:	Codec.Image.PNG, Codec.Image.PNG.Internal.CRC,
                        Codec.Image.PNG.Internal.Filters,
                        Codec.Image.PNG.Internal.Parser
  build-depends:	base >= 3, zlib, parsec >= 3.0.0 && <= 3.1.5, bytestring, array, mtl
  ghc-options:		-Wall
